policy-examples/high_level_vulnerabilities/npm-compromised.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: high-risk-npm-packages-2025
  labels:
    app.kubernetes.io/name: vulnerability-management
    app.kubernetes.io/part-of: security-policies
spec:
  policyName: High Risk NPM Packages (2025)
  description: Alert on deployments with high Vulnerabilities
  rationale: This policy checks packages that are highly vulnerable
  remediation: Use your package manager's "remove", "purge" or "erase" command to remove vulnerable packages from the image build for production containers. Ensure that any configuration files are also removed.
  disabled: false
  categories:
    - Vulnerability Management
  lifecycleStages:
    - BUILD
    - DEPLOY
  eventSource: NOT_APPLICABLE
  exclusions: []
  scope: []
  severity: HIGH_SEVERITY
  enforcementActions: []
  policyVersion: '1.1'
  policySections:
    - sectionName: ''
      policyGroups:
        - fieldName: Image Component
          booleanOperator: OR
          negate: false
          values:
            - value: "ansi-styles=6.2.2"
            - value: "debug=4.4.2"
            - value: "chalk=5.6.1"
            - value: "supports-color=10.2.1"
            - value: "strip-ansi=7.1.1"
            - value: "ansi-regex=6.2.1"
            - value: "wrap-ansi=9.0.1"
            - value: "color-convert=3.1.1"
            - value: "color-name=2.0.1"
            - value: "is-arrayish=0.3.3"
            - value: "slice-ansi=7.1.1"
            - value: "color=5.0.1"
            - value: "color-string=2.1.1"
            - value: "simple-swizzle=0.2.3"
            - value: "supports-hyperlinks=4.1.1"
            - value: "has-ansi=6.0.1"
            - value: "chalk-template=1.1.1"
            - value: "backslash=0.2.1"
            - value: "duckdb=1.3.3"
            - value: "duckdb/node-api=1.3.3"
            - value: "duckdb/node-bindings=1.3.3"
            - value: "duckdb/duckdb-wasm=1.29.2"
            - value: "ctrl/tinycolor=4.1.1"
            - value: "ctrl/tinycolor=4.1.2"
            - value: "angulartics2=14.1.2"
            - value: "angulartics2=14.1.1"
            - value: "ctrl/deluge=7.2.2"
            - value: "ctrl/deluge=7.2.1"
            - value: "ctrl/golang-template=1.4.3"
            - value: "ctrl/golang-template=1.4.2"
            - value: "ctrl/magnet-link=4.0.4"
            - value: "ctrl/magnet-link=4.0.3"
            - value: "ctrl/ngx-codemirror=7.0.2"
            - value: "ctrl/ngx-codemirror=7.0.1"
            - value: "ctrl/ngx-csv=6.0.2"
            - value: "ctrl/ngx-csv=6.0.1"
            - value: "ctrl/ngx-emoji-mart=9.2.2"
            - value: "ctrl/ngx-emoji-mart=9.2.1"
            - value: "ctrl/ngx-rightclick=4.0.2"
            - value: "ctrl/ngx-rightclick=4.0.1"
            - value: "ctrl/qbittorrent=9.7.2"
            - value: "ctrl/qbittorrent=9.7.1"
            - value: "ctrl/react-adsense=2.0.2"
            - value: "ctrl/react-adsense=2.0.1"
            - value: "ctrl/shared-torrent=6.3.2"
            - value: "ctrl/shared-torrent=6.3.1"
            - value: "ctrl/torrent-file=4.1.2"
            - value: "ctrl/torrent-file=4.1.1"
            - value: "ctrl/transmission=7.3.1"
            - value: "ctrl/ts-base32=4.0.2"
            - value: "ctrl/ts-base32=4.0.1"
            - value: "json-rules-engine-simplified=0.2.4"
            - value: "json-rules-engine-simplified=0.2.1"
            - value: "koa2-swagger-ui=5.11.2"
            - value: "koa2-swagger-ui=5.11.1"
            - value: "nativescript-community/gesturehandler=2.0.35"
            - value: "nativescript-community/sentry=4.6.43"
            - value: "nativescript-community/text=1.6.13"
            - value: "nativescript-community/text=1.6.9"
            - value: "nativescript-community/text=1.6.10"
            - value: "nativescript-community/text=1.6.11"
            - value: "nativescript-community/text=1.6.12"
            - value: "nativescript-community/ui-collectionview=6.0.6"
            - value: "nativescript-community/ui-drawer=0.1.30"
            - value: "nativescript-community/ui-image=4.5.6"
            - value: "nativescript-community/ui-material-bottomsheet=7.2.72"
            - value: "nativescript-community/ui-material-core=7.2.76"
            - value: "nativescript-community/ui-material-core=7.2.72"
            - value: "nativescript-community/ui-material-core=7.2.73"
            - value: "nativescript-community/ui-material-core=7.2.74"
            - value: "nativescript-community/ui-material-core=7.2.75"
            - value: "nativescript-community/ui-material-core-tabs=7.2.76"
            - value: "nativescript-community/ui-material-core-tabs=7.2.72"
            - value: "nativescript-community/ui-material-core-tabs=7.2.73"
            - value: "nativescript-community/ui-material-core-tabs=7.2.74"
            - value: "nativescript-community/ui-material-core-tabs=7.2.75"
            - value: "ngx-color=10.0.2"
            - value: "ngx-color=10.0.1"
            - value: "ngx-toastr=19.0.2"
            - value: "ngx-toastr=19.0.1"
            - value: "ngx-trend=8.0.1"
            - value: "react-complaint-image=0.0.35"
            - value: "react-complaint-image=0.0.32"
            - value: "react-jsonschema-form-conditionals=0.3.21"
            - value: "react-jsonschema-form-conditionals=0.3.18"
            - value: "react-jsonschema-form-extras=1.0.4"
            - value: "rxnt-authentication=0.0.6"
            - value: "rxnt-authentication=0.0.5"
            - value: "rxnt-authentication=0.0.3"
            - value: "rxnt-authentication=0.0.4"
            - value: "rxnt-healthchecks-nestjs=1.0.2"
            - value: "rxnt-healthchecks-nestjs=1.0.3"
            - value: "rxnt-healthchecks-nestjs=1.0.4"
            - value: "rxnt-healthchecks-nestjs=1.0.5"
            - value: "rxnt-kue=1.0.4"
            - value: "rxnt-kue=1.0.5"
            - value: "rxnt-kue=1.0.6"
            - value: "rxnt-kue=1.0.7"
            - value: "swc-plugin-component-annotate=1.9.2"
            - value: "swc-plugin-component-annotate=1.9.1"
            - value: "ts-gaussian=3.0.6"
            - value: "ts-gaussian=3.0.5"
            - value: "art-ws/common=2.0.28"
            - value: "art-ws/common=2.0.22"
            - value: "art-ws/config-eslint=2.0.5"
            - value: "art-ws/config-eslint=2.0.4"
            - value: "art-ws/config-ts=2.0.8"
            - value: "art-ws/config-ts=2.0.7"
            - value: "art-ws/db-context=2.0.24"
            - value: "art-ws/db-context=2.0.21"
            - value: "art-ws/di=2.0.32"
            - value: "art-ws/di=2.0.28"
            - value: "art-ws/di-node=2.0.13"
            - value: "art-ws/eslint=1.0.6"
            - value: "art-ws/eslint=1.0.5"
            - value: "art-ws/fastify-http-server=2.0.27"
            - value: "art-ws/fastify-http-server=2.0.24"
            - value: "art-ws/http-server=2.0.25"
            - value: "art-ws/http-server=2.0.21"
            - value: "art-ws/openapi=0.1.12"
            - value: "art-ws/openapi=0.1.9"
            - value: "art-ws/package-base=1.0.6"
            - value: "art-ws/package-base=1.0.5"
            - value: "art-ws/prettier=1.0.6"
            - value: "art-ws/prettier=1.0.5"
            - value: "art-ws/slf=2.0.22"
            - value: "art-ws/slf=2.0.15"
            - value: "art-ws/ssl-info=1.0.10"
            - value: "art-ws/ssl-info=1.0.9"
            - value: "art-ws/web-app=1.0.4"
            - value: "art-ws/web-app=1.0.3"
            - value: "hestjs/core=0.2.1"
            - value: "hestjs/cqrs=0.1.6"
            - value: "hestjs/demo=0.1.2"
            - value: "hestjs/eslint-config=0.1.2"
            - value: "hestjs/logger=0.1.6"
            - value: "hestjs/scalar=0.1.7"
            - value: "hestjs/validation=0.1.6"
            - value: "nexe/config-manager=0.1.1"
            - value: "nexe/eslint-config=0.1.1"
            - value: "nexe/logger=0.1.3"
            - value: "operato/board=9.0.51"
            - value: "operato/board=9.0.50"
            - value: "operato/board=9.0.49"
            - value: "operato/board=9.0.48"
            - value: "operato/board=9.0.47"
            - value: "operato/board=9.0.46"
            - value: "operato/board=9.0.45"
            - value: "operato/board=9.0.44"
            - value: "operato/board=9.0.43"
            - value: "operato/board=9.0.42"
            - value: "operato/board=9.0.41"
            - value: "operato/board=9.0.40"
            - value: "operato/board=9.0.39"
            - value: "operato/board=9.0.38"
            - value: "operato/board=9.0.37"
            - value: "operato/board=9.0.36"
            - value: "operato/board=9.0.35"
            - value: "operato/data-grist=9.0.37"
            - value: "operato/data-grist=9.0.36"
            - value: "operato/data-grist=9.0.35"
            - value: "operato/data-grist=9.0.29"
            - value: "operato/graphql=9.0.51"
            - value: "operato/graphql=9.0.50"
            - value: "operato/graphql=9.0.49"
            - value: "operato/graphql=9.0.48"
            - value: "operato/graphql=9.0.47"
            - value: "operato/graphql=9.0.46"
            - value: "operato/graphql=9.0.45"
            - value: "operato/graphql=9.0.44"
            - value: "operato/graphql=9.0.43"
            - value: "operato/graphql=9.0.42"
            - value: "operato/graphql=9.0.41"
            - value: "operato/graphql=9.0.40"
            - value: "operato/graphql=9.0.39"
            - value: "operato/graphql=9.0.38"
            - value: "operato/graphql=9.0.37"
            - value: "operato/graphql=9.0.36"
            - value: "operato/graphql=9.0.35"
            - value: "operato/graphql=9.0.22"
            - value: "operato/headroom=9.0.37"
            - value: "operato/headroom=9.0.36"
            - value: "operato/headroom=9.0.35"
            - value: "operato/headroom=9.0.2"
            - value: "operato/help=9.0.51"
            - value: "operato/help=9.0.50"
            - value: "operato/help=9.0.49"
            - value: "operato/help=9.0.48"
            - value: "operato/help=9.0.47"
            - value: "operato/help=9.0.46"
            - value: "operato/help=9.0.45"
            - value: "operato/help=9.0.44"
            - value: "operato/help=9.0.43"
            - value: "operato/help=9.0.42"
            - value: "operato/help=9.0.41"
            - value: "operato/help=9.0.40"
            - value: "operato/help=9.0.39"
            - value: "operato/help=9.0.38"
            - value: "operato/help=9.0.37"
            - value: "operato/help=9.0.36"
            - value: "operato/help=9.0.35"
            - value: "operato/i18n=9.0.37"
            - value: "operato/i18n=9.0.36"
            - value: "operato/i18n=9.0.35"
            - value: "operato/input=9.0.48"
            - value: "operato/input=9.0.47"
            - value: "operato/input=9.0.46"
            - value: "operato/input=9.0.45"
            - value: "operato/input=9.0.44"
            - value: "operato/input=9.0.43"
            - value: "operato/input=9.0.42"
            - value: "operato/input=9.0.41"
            - value: "operato/input=9.0.40"
            - value: "operato/input=9.0.39"
            - value: "operato/input=9.0.38"
            - value: "operato/input=9.0.37"
            - value: "operato/input=9.0.36"
            - value: "operato/input=9.0.35"
            - value: "operato/input=9.0.27"
            - value: "operato/layout=9.0.37"
            - value: "operato/layout=9.0.36"
            - value: "operato/layout=9.0.35"
            - value: "operato/popup=9.0.50"
            - value: "operato/popup=9.0.49"
            - value: "operato/popup=9.0.48"
            - value: "operato/popup=9.0.47"
            - value: "operato/popup=9.0.46"
            - value: "operato/popup=9.0.45"
            - value: "operato/popup=9.0.44"
            - value: "operato/popup=9.0.43"
            - value: "operato/popup=9.0.42"
            - value: "operato/popup=9.0.41"
            - value: "operato/popup=9.0.40"
            - value: "operato/popup=9.0.39"
            - value: "operato/popup=9.0.38"
            - value: "operato/popup=9.0.37"
            - value: "operato/popup=9.0.36"
            - value: "operato/popup=9.0.35"
            - value: "operato/popup=9.0.22"
            - value: "operato/pull-to-refresh=9.0.47"
            - value: "operato/pull-to-refresh=9.0.46"
            - value: "operato/pull-to-refresh=9.0.45"
            - value: "operato/pull-to-refresh=9.0.44"
            - value: "operato/pull-to-refresh=9.0.43"
            - value: "operato/pull-to-refresh=9.0.42"
            - value: "operato/pull-to-refresh=9.0.41"
            - value: "operato/pull-to-refresh=9.0.40"
            - value: "operato/pull-to-refresh=9.0.39"
            - value: "operato/pull-to-refresh=9.0.38"
            - value: "operato/pull-to-refresh=9.0.37"
            - value: "operato/pull-to-refresh=9.0.36"
            - value: "operato/pull-to-refresh=9.0.35"
            - value: "operato/shell=9.0.39"
            - value: "operato/shell=9.0.38"
            - value: "operato/shell=9.0.37"
            - value: "operato/shell=9.0.36"
            - value: "operato/shell=9.0.35"
            - value: "operato/shell=9.0.22"
            - value: "operato/styles=9.0.37"
            - value: "operato/styles=9.0.36"
            - value: "operato/styles=9.0.35"
            - value: "operato/styles=9.0.2"
            - value: "operato/utils=9.0.51"
            - value: "operato/utils=9.0.50"
            - value: "operato/utils=9.0.49"
            - value: "operato/utils=9.0.48"
            - value: "operato/utils=9.0.47"
            - value: "operato/utils=9.0.46"
            - value: "operato/utils=9.0.45"
            - value: "operato/utils=9.0.44"
            - value: "operato/utils=9.0.43"
            - value: "operato/utils=9.0.42"
            - value: "operato/utils=9.0.41"
            - value: "operato/utils=9.0.40"
            - value: "operato/utils=9.0.39"
            - value: "operato/utils=9.0.38"
            - value: "operato/utils=9.0.37"
            - value: "operato/utils=9.0.36"
            - value: "operato/utils=9.0.35"
            - value: "operato/utils=9.0.22"
            - value: "teselagen/bounce-loader=0.3.17"
            - value: "teselagen/bounce-loader=0.3.16"
            - value: "teselagen/liquibase-tools=0.4.1"
            - value: "teselagen/range-utils=0.3.15"
            - value: "teselagen/range-utils=0.3.14"
            - value: "teselagen/react-list=0.8.20"
            - value: "teselagen/react-list=0.8.19"
            - value: "teselagen/react-table=6.10.22"
            - value: "teselagen/react-table=6.10.20"
            - value: "teselagen/react-table=6.10.19"
            - value: "thangved/callback-window=1.1.4"
            - value: "things-factory/attachment-base=9.0.50"
            - value: "things-factory/attachment-base=9.0.49"
            - value: "things-factory/attachment-base=9.0.48"
            - value: "things-factory/attachment-base=9.0.47"
            - value: "things-factory/attachment-base=9.0.46"
            - value: "things-factory/attachment-base=9.0.45"
            - value: "things-factory/attachment-base=9.0.44"
            - value: "things-factory/attachment-base=9.0.43"
            - value: "things-factory/attachment-base=9.0.42"
            - value: "things-factory/auth-base=9.0.45"
            - value: "things-factory/auth-base=9.0.44"
            - value: "things-factory/auth-base=9.0.43"
            - value: "things-factory/auth-base=9.0.42"
            - value: "things-factory/email-base=9.0.54"
            - value: "things-factory/email-base=9.0.53"
            - value: "things-factory/email-base=9.0.52"
            - value: "things-factory/email-base=9.0.51"
            - value: "things-factory/email-base=9.0.50"
            - value: "things-factory/email-base=9.0.49"
            - value: "things-factory/email-base=9.0.48"
            - value: "things-factory/email-base=9.0.47"
            - value: "things-factory/email-base=9.0.46"
            - value: "things-factory/email-base=9.0.45"
            - value: "things-factory/email-base=9.0.44"
            - value: "things-factory/email-base=9.0.43"
            - value: "things-factory/email-base=9.0.42"
            - value: "things-factory/env=9.042"
            - value: "things-factory/env=9.043"
            - value: "things-factory/env=9.044"
            - value: "things-factory/env=9.045"
            - value: "things-factory/integration-base=9.042"
            - value: "things-factory/integration-base=9.043"
            - value: "things-factory/integration-base=9.044"
            - value: "things-factory/integration-base=9.045"
            - value: "things-factory/integration-marketplace=9.042"
            - value: "things-factory/integration-marketplace=9.043"
            - value: "things-factory/integration-marketplace=9.044"
            - value: "things-factory/integration-marketplace=9.045"
            - value: "things-factory/shell=9.042"
            - value: "things-factory/shell=9.043"
            - value: "things-factory/shell=9.044"
            - value: "things-factory/shell=9.045"
            - value: "tnf-dev/api=1.0.8"
            - value: "tnf-dev/core=1.0.8"
            - value: "tnf-dev/js=1.0.8"
            - value: "tnf-dev/mui=1.0.8"
            - value: "tnf-dev/react=1.0.8"
            - value: "ui-ux-gang/devextreme-angular-rpk=24.1.7"
            - value: "yoobic/yobi=8.7.53"
            - value: "yoobic/jpeg-camera-es6=1.0.13"
            - value: "airchief=0.3.1"
            - value: "airpilot=0.8.8"
            - value: "capacitor-notificationhandler=0.0.3"
            - value: "capacitor-notificationhandler=0.0.2"
            - value: "capacitor-plugin-healthapp=0.0.3"
            - value: "capacitor-plugin-healthapp=0.0.2"
            - value: "capacitor-plugin-ihealth=1.1.9"
            - value: "capacitor-plugin-ihealth=1.1.8"
            - value: "capacitor-plugin-vonage=1.0.3"
            - value: "capacitor-plugin-vonage=1.0.2"
            - value: "capacitorandroidpermissions=0.0.5"
            - value: "capacitorandroidpermissions=0.0.4"
            - value: "create-hest-app=0.1.9"
            - value: "db-evo=1.1.5"
            - value: "db-evo=1.1.4"
            - value: "devextreme-angular-rpk=21.2.8"
            - value: "eslint-config-teselagen=6.1.8"
            - value: "eslint-config-teselagen=6.1.7"
            - value: "globalize-rpk=1.7.4"
            - value: "graphql-sequelize-teselagen=5.3.9"
            - value: "graphql-sequelize-teselagen=5.3.8"
            - value: "jumpgate=0.0.2"
            - value: "mcp-knowledge-graph=1.2.1"
            - value: "mstate-angular=0.4.4"
            - value: "mstate-cli=0.4.7"
            - value: "mstate-dev-react=1.1.1"
            - value: "mstate-react=1.6.5"
            - value: "ngx-bootstrap=20.0.4"
            - value: "ngx-bootstrap=20.0.5"
            - value: "ngx-bootstrap=20.0.6"
            - value: "ngx-bootstrap=19.0.3"
            - value: "ngx-bootstrap=18.1.4"
            - value: "ngx-ws=1.1.6"
            - value: "ngx-ws=1.1.5"
            - value: "oradm-to-gql=35.0.15"
            - value: "oradm-to-gql=35.0.14"
            - value: "oradm-to-sqlz=1.1.5"
            - value: "oradm-to-sqlz=1.1.2"
            - value: "ove-auto-annotate=0.0.10"
            - value: "ove-auto-annotate=0.0.9"
            - value: "pm2-gelf-json=1.0.5"
            - value: "pm2-gelf-json=1.0.4"
            - value: "tbssnch=1.0.2"
            - value: "teselagen-interval-tree=1.1.2"
            - value: "tg-client-query-builder=2.14.5"
            - value: "tg-client-query-builder=2.14.4"
            - value: "tg-redbird=1.3.2"
            - value: "tg-redbird=1.3.1"
            - value: "tg-seq-gen=1.0.10"
            - value: "tg-seq-gen=1.0.9"
            - value: "ts-imports=1.0.2"
            - value: "ts-imports=1.0.1"
            - value: "tvi-cli=0.1.5"
            - value: "ve-bamreader=0.2.7"
            - value: "ve-bamreader=0.2.6"
            - value: "ve-editor=1.0.2"
            - value: "ve-editor=1.0.1"
            - value: "voip-callkit=1.0.3"
            - value: "voip-callkit=1.0.2"
            - value: "wdio-web-reporter=0.1.3"
            - value: "yargs-help-output=5.0.3"
            - value: "yoo-styles=6.0.326"
            - value: "ahmedhfarag/ngx-perfect-scrollbar=20.0.20"
            - value: "ahmedhfarag/ngx-virtual-scroller=4.0.4"
            - value: "crowdstrike/commitlint=8.1.1"
            - value: "crowdstrike/commitlint=8.1.2"
            - value: "crowdstrike/falcon-shoelace=0.4.1"
            - value: "crowdstrike/falcon-shoelace=0.4.2"
            - value: "crowdstrike/foundry-js=0.19.1"
            - value: "crowdstrike/foundry-js=0.19.2"
            - value: "crowdstrike/glide-core=0.34.2"
            - value: "crowdstrike/glide-core=0.34.3"
            - value: "crowdstrike/logscale-dashboard=1.205.1"
            - value: "crowdstrike/logscale-dashboard=1.205.2"
            - value: "crowdstrike/logscale-file-editor=1.205.1"
            - value: "crowdstrike/logscale-file-editor=1.205.2"
            - value: "crowdstrike/logscale-parser-edit=1.205.1"
            - value: "crowdstrike/logscale-parser-edit=1.205.2"
            - value: "crowdstrike/logscale-search=1.205.1"
            - value: "crowdstrike/logscale-search=1.205.2"
            - value: "crowdstrike/tailwind-toucan-base=5.0.1"
            - value: "crowdstrike/tailwind-toucan-base=5.0.2"
            - value: "nativescript-community/arraybuffers=1.1.6"
            - value: "nativescript-community/arraybuffers=1.1.7"
            - value: "nativescript-community/arraybuffers=1.1.8"
            - value: "nativescript-community/perms=3.0.5"
            - value: "nativescript-community/perms=3.0.6"
            - value: "nativescript-community/perms=3.0.7"
            - value: "nativescript-community/perms=3.0.8"
            - value: "nativescript-community/sqlite=3.5.2"
            - value: "nativescript-community/sqlite=3.5.3"
            - value: "nativescript-community/sqlite=3.5.4"
            - value: "nativescript-community/sqlite=3.5.5"
            - value: "nativescript-community/typeorm=0.2.30"
            - value: "nativescript-community/typeorm=0.2.31"
            - value: "nativescript-community/typeorm=0.2.32"
            - value: "nativescript-community/typeorm=0.2.33"
            - value: "nativescript-community/ui-document-picker=1.1.27"
            - value: "nativescript-community/ui-document-picker=1.1.28"
            - value: "nativescript-community/ui-label=1.3.35"
            - value: "nativescript-community/ui-label=1.3.36"
            - value: "nativescript-community/ui-label=1.3.37"
            - value: "nativescript-community/ui-material-bottom-navigation=7.2.72"
            - value: "nativescript-community/ui-material-bottom-navigation=7.2.73"
            - value: "nativescript-community/ui-material-bottom-navigation=7.2.74"
            - value: "nativescript-community/ui-material-bottom-navigation=7.2.75"
            - value: "nativescript-community/ui-material-ripple=7.2.72"
            - value: "nativescript-community/ui-material-ripple=7.2.73"
            - value: "nativescript-community/ui-material-ripple=7.2.74"
            - value: "nativescript-community/ui-material-ripple=7.2.75"
            - value: "nativescript-community/ui-material-tabs=7.2.72"
            - value: "nativescript-community/ui-material-tabs=7.2.73"
            - value: "nativescript-community/ui-material-tabs=7.2.74"
            - value: "nativescript-community/ui-material-tabs=7.2.75"
            - value: "nativescript-community/ui-pager=14.1.36"
            - value: "nativescript-community/ui-pager=14.1.37"
            - value: "nativescript-community/ui-pager=14.1.38"
            - value: "nativescript-community/ui-pulltorefresh=2.5.4"
            - value: "nativescript-community/ui-pulltorefresh=2.5.5"
            - value: "nativescript-community/ui-pulltorefresh=2.5.6"
            - value: "nativescript-community/ui-pulltorefresh=2.5.7"
            - value: "nstudio/angular=20.0.4"
            - value: "nstudio/focus=20.0.4"
            - value: "nstudio/focus=20.0.5"
            - value: "nstudio/focus=20.0.6"
            - value: "nstudio/nativescript-checkbox=2.0.6"
            - value: "nstudio/nativescript-checkbox=2.0.7"
            - value: "nstudio/nativescript-checkbox=2.0.8"
            - value: "nstudio/nativescript-checkbox=2.0.9"
            - value: "nstudio/nativescript-loading-indicator=5.0.1"
            - value: "nstudio/nativescript-loading-indicator=5.0.2"
            - value: "nstudio/nativescript-loading-indicator=5.0.3"
            - value: "nstudio/nativescript-loading-indicator=5.0.4"
            - value: "nstudio/ui-collectionview=5.1.11"
            - value: "nstudio/ui-collectionview=5.1.12"
            - value: "nstudio/ui-collectionview=5.1.13"
            - value: "nstudio/ui-collectionview=5.1.14"
            - value: "nstudio/web=20.0.4"
            - value: "nstudio/web-angular=20.0.4"
            - value: "nstudio/xplat=20.0.5"
            - value: "nstudio/xplat=20.0.6"
            - value: "nstudio/xplat=20.0.7"
            - value: "nstudio/xplat-utils=20.0.5"
            - value: "nstudio/xplat-utils=20.0.6"
            - value: "nstudio/xplat-utils=20.0.7"
            - value: "browser-webdriver-downloader=3.0.8"
            - value: "config-cordova=0.8.5"
            - value: "cordova-plugin-voxeet2=1.0.24"
            - value: "cordova-voxeet=1.0.32"
            - value: "ember-browser-services=5.0.2"
            - value: "ember-browser-services=5.0.3"
            - value: "ember-headless-form=1.1.2"
            - value: "ember-headless-form=1.1.3"
            - value: "ember-headless-form-yup=1.0.1"
            - value: "ember-headless-table=2.1.5"
            - value: "ember-headless-table=2.1.6"
            - value: "ember-url-hash-polyfill=1.0.12"
            - value: "ember-url-hash-polyfill=1.0.13"
            - value: "ember-velcro=2.2.1"
            - value: "ember-velcro=2.2.2"
            - value: "encounter-playground=0.0.2"
            - value: "encounter-playground=0.0.3"
            - value: "encounter-playground=0.0.4"
            - value: "encounter-playground=0.0.5"
            - value: "eslint-config-crowdstrike=11.0.2"
            - value: "eslint-config-crowdstrike=11.0.3"
            - value: "eslint-config-crowdstrike-node=4.0.4"
            - value: "eslint-config-crowdstrike-node=4.0.3"
            - value: "html-to-base64-image=1.0.2"
            - value: "mcfly-semantic-release=1.3.1"
            - value: "mcp-knowledge-base=0.0.2"
            - value: "mobioffice-cli=1.0.3"
            - value: "monorepo-next=13.0.1"
            - value: "monorepo-next=13.0.2"
            - value: "ng2-file-upload=7.0.2"
            - value: "ng2-file-upload=7.0.3"
            - value: "ng2-file-upload=8.0.1"
            - value: "ng2-file-upload=8.0.2"
            - value: "ng2-file-upload=8.0.3"
            - value: "ng2-file-upload=9.0.1"
            - value: "printjs-rpk=1.6.1"
            - value: "remark-preset-lint-crowdstrike=4.0.1"
            - value: "remark-preset-lint-crowdstrike=4.0.2"
            - value: "thangved-react-grid=1.0.3"
  mitreAttackVectors: []
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
  source: IMPERATIVE
